--- a/css/shared.css
+++ b/css/shared.css
@@ -116,6 +116,7 @@ nav a {
     background: linear-gradient(355deg, #9356DC 0%, #FF79DA 100%);
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
     cursor: pointer;
+    transform: all 0.5s;
 }
 
 .btn:hover {
