--- a/css/home.css
+++ b/css/home.css
@@ -255,6 +255,21 @@ a {
     font-size: 14px;
 }
 
+.material-symbols-outlined {
+    margin-right: 20px;
+}
+
+.like {
+    margin-right:  20px;
+    width: 24px;
+}
+
+.liked {
+    background: linear-gradient(355deg, #9356DC 0%, #FF79DA 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+}
 
 /* RESPONSIVE */
 
