--- a/css/restaurants.scss
+++ b/css/restaurants.scss
@@ -1,12 +1,23 @@
+@mixin delay ($nb, $value) {
+    @for $i from 1 to ($nb + 1) {
+        &:nth-of-type(#{$i}) {
+            -webkit-animation-duration: (#{$i * $value});
+            animation-duration: (#{$i * $value});
+        }
+    }
+}
+
 @keyframes fade_in {
     0% {
         opacity: 0;
+        transform: translateY(50px);
     }
     50% {
         opacity: 0;
     }
     100% {
         opacity: 1;
+        transform: translateY(0px);
     }
 }
 
@@ -60,7 +71,6 @@ main {
 #preview img {
     width: 100%;
     max-height: 380px;
-    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -117,86 +127,7 @@ main {
     overflow: hidden;
     cursor: pointer;
     animation: ease-in fade_in;
-}
-
-.item:nth-of-type(1) {
-    animation-duration: 0.25s;
-}
-
-.item:nth-of-type(2) {
-    animation-duration: 0.5s;
-}
-
-.item:nth-of-type(3) {
-    animation-duration: 0.75s;
-}
-
-.item:nth-of-type(4) {
-    animation-duration: 1s;
-}
-
-.item:nth-of-type(5) {
-    animation-duration: 1.25s;
-}
-
-.item:nth-of-type(6) {
-    animation-duration: 1.5s;
-}
-
-.item:nth-of-type(7) {
-    animation-duration: 1.75s;
-}
-
-.item:nth-of-type(8) {
-    animation-duration: 2s;
-}
-
-.item:nth-of-type(9) {
-    animation-duration: 2.25s;
-}
-
-.item:nth-of-type(10) {
-    animation-duration: 2.5s;
-}
-
-.item:nth-of-type(11) {
-    animation-duration: 2.75s;
-}
-
-.item:nth-of-type(12) {
-    animation-duration: 3s;
-}
-
-.item:nth-of-type(13) {
-    animation-duration: 3.25s;
-}
-
-.item:nth-of-type(14) {
-    animation-duration: 3.5s;
-}
-
-.item:nth-of-type(15) {
-    animation-duration: 3.75s;
-}
-
-.item:nth-of-type(16) {
-    animation-duration: 4s;
-}
-
-.item:nth-of-type(17) {
-    animation-duration: 4.25s;
-}
-
-.item:nth-of-type(18) {
-    animation-duration: 4.5s;
-}
-
-.item:nth-of-type(19) {
-    animation-duration: 4.75s;
-}
-
-.item:nth-of-type(20) {
-    animation-duration: 5s;
+    @include delay(15, 0.25s)
 }
 
 .item_info {
@@ -262,7 +193,7 @@ main {
 
 .material-symbols-outlined {
     background: none;
-    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
     cursor: pointer;
     transition: all 0.5s;
 }
@@ -271,9 +202,6 @@ main {
     background: linear-gradient(355deg, #9356DC 0%, #FF79DA 100%);
     background-clip: text;
     -webkit-background-clip: text;
-    font-variation-settings: "FILL" 1;
+    font-variation-settings: 'FILL' 1;
     color: transparent;
 }
-
-
-/*# sourceMappingURL=test.css.map */
