--- a/css/restaurants_old.css
+++ b/css/restaurants_old.css
@@ -1,16 +1,3 @@
-@keyframes fade_in {
-    0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-
 /* MAIN */
 
 h1 {
@@ -60,7 +47,6 @@ main {
 #preview img {
     width: 100%;
     max-height: 380px;
-    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -100,6 +86,33 @@ main {
     max-width: 634px;
 }
 
+.sub_menu1 {
+    animation: 1s ease-in fade_in;
+    animation-iteration-count: 1;
+}
+
+.sub_menu2 {
+    animation: 2s ease-in fade_in;
+    animation-iteration-count: 1;
+}
+
+.sub_menu3 {
+    animation: 4s ease-in fade_in;
+    animation-iteration-count: 1;
+}
+
+@keyframes fade_in {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 .line {
     border-top: 3px solid #99E2D0;
     width: 40px;
@@ -113,103 +126,27 @@ main {
     border-radius: 15px;
     background-color: white;
     box-sizing: border-box;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
     overflow: hidden;
     cursor: pointer;
-    animation: ease-in fade_in;
 }
 
-.item:nth-of-type(1) {
-    animation-duration: 0.25s;
-}
-
-.item:nth-of-type(2) {
-    animation-duration: 0.5s;
-}
-
-.item:nth-of-type(3) {
-    animation-duration: 0.75s;
-}
-
-.item:nth-of-type(4) {
-    animation-duration: 1s;
-}
-
-.item:nth-of-type(5) {
-    animation-duration: 1.25s;
-}
-
-.item:nth-of-type(6) {
-    animation-duration: 1.5s;
-}
-
-.item:nth-of-type(7) {
-    animation-duration: 1.75s;
-}
-
-.item:nth-of-type(8) {
-    animation-duration: 2s;
-}
-
-.item:nth-of-type(9) {
-    animation-duration: 2.25s;
-}
-
-.item:nth-of-type(10) {
-    animation-duration: 2.5s;
-}
-
-.item:nth-of-type(11) {
-    animation-duration: 2.75s;
-}
-
-.item:nth-of-type(12) {
-    animation-duration: 3s;
-}
-
-.item:nth-of-type(13) {
-    animation-duration: 3.25s;
-}
-
-.item:nth-of-type(14) {
-    animation-duration: 3.5s;
-}
-
-.item:nth-of-type(15) {
-    animation-duration: 3.75s;
-}
-
-.item:nth-of-type(16) {
-    animation-duration: 4s;
-}
-
-.item:nth-of-type(17) {
-    animation-duration: 4.25s;
-}
-
-.item:nth-of-type(18) {
-    animation-duration: 4.5s;
-}
-
-.item:nth-of-type(19) {
-    animation-duration: 4.75s;
-}
-
-.item:nth-of-type(20) {
-    animation-duration: 5s;
+.item_content {
+    display: flex;
+    flex-direction: column;
+    width: calc(100% - 60px);
+    transition: all ease-in 0.5s;
 }
 
 .item_info {
     display: flex;
     flex-direction: column;
-    gap: 6px;
-    width: 80%;
-    padding: 12px 0px 12px 12px;
+    width: 100%;
 }
 
 .item_txt {
     display: inline-block;
-    width: 100%;
+    width: calc(100% - 0px);
     font-size: 15px;
     font-weight: 300;
     overflow: hidden;
@@ -219,13 +156,11 @@ main {
 
 .item_price {
     display: flex;
-    justify-content: flex-end;
     align-self: flex-end;
     font-size: 15px;
     font-weight: 700;
-    width: 15%;
-    padding: 0px 14px 14px 0px;
-    box-sizing: border-box;
+    width: 30px;
+    margin: 10px;
 }
 
 .cmd_btn {
@@ -250,7 +185,7 @@ main {
 }
 
 .item:hover .item_info {
-    width: calc(80% - 60px);
+    width: calc(100% - 60px);
 }
 
 .check_mark img {
@@ -262,7 +197,7 @@ main {
 
 .material-symbols-outlined {
     background: none;
-    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
     cursor: pointer;
     transition: all 0.5s;
 }
@@ -271,9 +206,6 @@ main {
     background: linear-gradient(355deg, #9356DC 0%, #FF79DA 100%);
     background-clip: text;
     -webkit-background-clip: text;
-    font-variation-settings: "FILL" 1;
+    font-variation-settings: 'FILL' 1;
     color: transparent;
 }
-
-
-/*# sourceMappingURL=test.css.map */
