--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,31 @@
+/* ANIMATION */
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+
+    75% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes spin {
+    0% {
+        opacity: 1;
+        transform: rotate(0deg);
+    }
+
+    100% {
+        opacity: 1;
+        transform: rotate(360deg);
+    }
+}
+
 /* MAIN */
 
 h1 {
@@ -34,18 +62,6 @@ a {
     animation-duration: 4s;
 }
 
-@keyframes appear {
-    0% {
-        opacity: 0;
-    }
-    75% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
 #loader {
     opacity: 0;
     position: absolute;
@@ -64,16 +80,7 @@ a {
     pointer-events: none;
 }
 
-@keyframes spin {
-    0% {
-        opacity: 1;
-        transform: rotate(0deg);
-    }
-    100% {
-        opacity: 1;
-        transform: rotate(360deg);
-    }
-}
+
 
 #location {
     display: flex;
@@ -260,7 +267,7 @@ a {
 }
 
 .like {
-    margin-right:  20px;
+    margin-right: 20px;
     width: 24px;
 }
 
@@ -277,6 +284,7 @@ a {
     h1 {
         font-size: 40px;
     }
+
     #restaurants_list {
         gap: 50px calc(40px + 5%);
     }
