--- a/css/shared.css
+++ b/css/shared.css
@@ -115,7 +115,7 @@ nav a {
     background: linear-gradient(355deg, #9356DC 0%, #FF79DA 100%);
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
     cursor: pointer;
-    transform: all 0.5s;
+    transition: all 0.5s;
 }
 
 .btn:hover {
@@ -133,6 +133,7 @@ nav a {
         padding-top: 60px;
         padding-right: 40px;
     }
+
     nav {
         flex-direction: row;
         gap: 10px;
