last last modifs
enfin !

--- a/css/home.css
+++ b/css/home.css
@@ -88,6 +88,13 @@ a {
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15) inset;
 }
 
+#location input {
+    border: none;
+    background-color: #EAEAEA;
+    color: black;
+    font-weight: bold;
+}
+
 #intro {
     display: flex;
     flex-direction: column;
